--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,24 +1,39 @@
-FROM miktex/miktex:ubuntu
+# Usa una versione di Ubuntu base
+FROM ubuntu:20.04
 
-# Installa Python + Pygments
-RUN apt-get update && apt-get install -y \
-    python3 \
-    python3-pip \
+# Impostazioni ambientali per evitare interattività durante l'installazione
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Aggiorna il sistema e installa le dipendenze necessarie
+RUN apt-get update && apt-get upgrade -y && \
+    apt-get install -y \
+    wget \
+    curl \
     perl \
     make \
     git \
-    curl \
+    python3 \
+    python3-pip \
+    vim \
     unzip \
-    vim
+    bash \
+    lsb-release \
+    && apt-get clean
 
-# Installa pacchetti Python necessari per minted
+# Installa MiKTeX (versione base senza l'immagine miktex/miktex:ubuntu)
+RUN wget -qO- https://miktex.org/download/ubuntu | bash && \
+    miktexsetup --admin --update-fndb && \
+    miktexsetup --admin --install
+
+# Imposta MikTeX per il completamento automatico dei pacchetti
+RUN initexmf --admin --set-config-value [MPM]AutoInstall=1 && \
+    initexmf --admin --update-fndb
+
+# Installa Pygments per il supporto a minted
 RUN pip3 install Pygments
 
-# Configura MiKTeX
-RUN miktexsetup finish && \
-    initexmf --admin --set-config-value [MPM]AutoInstall=1 && \
-    initexmf --admin --update-fndb && \
-    initexmf --update-fndb
-
+# Aggiungi i file di lavoro nel container
 WORKDIR /workspace
+
+# Lancia il container con bash
 CMD ["bash"]
