--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 #comando per lanciarlo da terminale altrimenti c'è la versione desktop per farlo
-docker run --rm -v /path/to/your/latex/files:/miktex/input fisherman/miktex pdflatex /miktex/input/document.tex
+docker run --rm -it -v $(pwd):/data mfisherman/miktex /bin/sh # <- linux
+docker run --rm -it -v ${PWD}:/data mfisherman/miktex /bin/sh # <- windows
+
+
 
 bibtex /data/document #<- compilare per generare bibliografia
 pdflatex /data/document.tex #<- compila e crea il file pdf
